Add ParticleInfo class to the pp6lib library

--- a/PP6Lib/CMakeLists.txt
+++ b/PP6Lib/CMakeLists.txt
@@ -2,4 +2,4 @@
 #
 
 # - Add library
-add_library(pp6lib STATIC PP6Math.cpp PP6Math.hpp PP6Physics.cpp PP6Physics.hpp ClassFourVector.cpp ClassFourVector.hpp StructFourVector.cpp StructFourVector.hpp ClassThreeVector.cpp ClassThreeVector.hpp Particle.cpp Particle.hpp)
+add_library(pp6lib STATIC PP6Math.cpp PP6Math.hpp PP6Physics.cpp PP6Physics.hpp ClassFourVector.cpp ClassFourVector.hpp StructFourVector.cpp StructFourVector.hpp ClassThreeVector.cpp ClassThreeVector.hpp Particle.cpp Particle.hpp ParticleInfo.cpp ParticleInfo.hpp)
